[package]
name = "memoru"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "3.0.0-beta.4"
duct = "0.13.5"
once_cell = "1.8.0"
rustyline = "9.0.0"
thiserror = "1.0"
walkdir = "2.3.2"
